# Goblet_Gobblers

./: README.md
1_Interface console C/: CMakeLists.txt  main.c  makefile
2_Moteur de jeu C++/: CMakeLists.txt  board.cpp  board.h  main.cpp  makefile
